# rust-with-android

./: README  build.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/hello/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/rust/: Cargo.toml  build.rs  uniffi.toml
app/src/main/rust/src/: lib.rs  rust.udl
app/src/main/rust/src/uniffi/rust/: rust.kt
gradle/wrapper/: gradle-wrapper.properties
