[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "uniffi_rust"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi_macros  = {version = "0.17.0", features = [ "builtin-bindgen" ]}
uniffi = {version = "0.17.0", features = [ "builtin-bindgen" ]}

[build-dependencies]
uniffi_build = {version = "0.17.0", features = [ "builtin-bindgen" ]}